@@ -1,10 +1,17 @@
 2001-03-04  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>
 
+	* goops/compile.scm (compile-method): Tag method closure for body
+	expansion.
+
 	* goops.scm (change-object-class): Quote empty list constants.
 	(method): Reverted previous change (enclosing body);
 	Quote empty list.
-	(initialize <method>): Pre-expand the method closure.
+	(initialize <method>): Supply `dummy-procedure' as default instead
+	of creating a new closure.
 	
+	* goops/internal.scm: Re-export (oop goops) without copying
+	bindings.
+
 2001-02-23  Keisuke Nishida  <kxn30@po.cwru.edu>
 
 	* goops.scm (method): Enclosed BODY by `(let () ...)'.
